修改配置防止安装时报错

--- a/cutefish_config/modules/packages.conf
+++ b/cutefish_config/modules/packages.conf
@@ -5,6 +5,6 @@ backend: apt
 operations:
   - remove:
       - calamares
-      - cutefish-calamares-settings
-      - '^live-*'
+#      - cutefish-calamares-settings
+#      - '^live-*'
       
